feat: add scenario for InitialRAMPercentage